--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_BACKEND_URL=https://code-and-collab.onrender.com
 REACT_APP_GEMINI_API_KEY=AIzaSyDE4DwzM35iVXJcKMv1X0zkcVzGvnpIGQc
